<resources>
    <string name="app_name">Multiple Choice Questions</string>
    <string name="action_settings">Settings</string>
    <string name="text_grile">Questions</string>
    <string name="text_info">Info</string>
    <string name="text_category">Category: </string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="dialog_message">Do you agree with this general information ?</string>
    <string name="unfinished_text">Are you sure you want to finish ? You have not answered the following question(s):</string>
    <string name="results">Results</string>
    <string name="correct_answers">Correct Answers :</string>
    <string name="check_results">Check Results</string>
    <string name="main_menu">Main Menu</string>
    <string name="text_ended">The test is over!</string>
</resources>
